# IndexSet

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
include/: index_set.h
source/: index_set.cpp
test/: CMakeLists.txt
test/source/: index_set.cpp  readme_example.cpp
